// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button default 1`] = `
"<Frame width={100} height={40}>
  <Button
    width=\\"100px\\"
    size=\\"md\\"
    backgroundColor=\\"#f1f5f9\\"
    color=\\"#000\\"
    isDisabled={false}
  >
    {'Submit'}
  </Button>
</Frame>;
"
`;

exports[`generate file base 1`] = `
Object {
  "App.tsx": "import { Box } from '@chakra-ui/react';

import * as React from 'react';

function Frame(props: React.ComponentProps<typeof Box>) {
  return <Box pos=\\"absolute\\" {...props} />;
}

function App() {
  return <></>;
}
export { App };
",
  "package.json": "{
  \\"name\\": \\"app\\",
  \\"dependencies\\": {
    \\"react\\": \\"^18\\",
    \\"@chakra-ui/icons\\": \\"^2\\",
    \\"@chakra-ui/react\\": \\"^1\\",
    \\"@emotion/react\\": \\"^11\\",
    \\"@emotion/styled\\": \\"^11\\"
  }
}",
}
`;

exports[`hero default 1`] = `
"<Frame width={400} height={400}>
  <Flex
    width=\\"400px\\"
    height=\\"400px\\"
    className=\\"flex-col p-4 gap-3 bg-transparent justify-center items-center\\"
  >
    <Flex>
      <Heading
        flex=\\"1\\"
        size=\\"xl\\"
        className=\\"text-center\\"
        textAlign=\\"center\\"
        lineHeight=\\"1.3\\"
      >
        {'Create, iterate, inspire.'}
      </Heading>
    </Flex>
    <Text textAlign=\\"center\\" className=\\"text-center mb-4\\">
      {'Turn great ideas into new possibilities.'}
    </Text>
    <Button size=\\"md\\" backgroundColor=\\"#15803d\\" color=\\"#fff\\" isDisabled={false}>
      {'Get started'}
    </Button>
  </Flex>
</Frame>;
"
`;

exports[`hero left aligned default 1`] = `
"<Frame width={400} height={400}>
  <Flex
    width=\\"400px\\"
    height=\\"400px\\"
    className=\\"flex-col p-4 gap-3 bg-transparent justify-center items-start\\"
  >
    <Flex>
      <Heading
        flex=\\"1\\"
        size=\\"xl\\"
        className=\\"text-center\\"
        textAlign=\\"left\\"
        lineHeight=\\"1.3\\"
      >
        {'Create, iterate, inspire.'}
      </Heading>
    </Flex>
    <Text textAlign=\\"left\\" className=\\"text-center mb-4\\">
      {'Turn great ideas into new possibilities.'}
    </Text>
    <Button size=\\"md\\" backgroundColor=\\"#15803d\\" color=\\"#fff\\" isDisabled={false}>
      {'Get started'}
    </Button>
  </Flex>
</Frame>;
"
`;

exports[`hero with bg default 1`] = `
"<Frame width={400} height={400}>
  <Flex
    width=\\"400px\\"
    height=\\"400px\\"
    className=\\"flex-col p-4 gap-3 bg-blue-500 justify-center items-center\\"
  >
    <Flex>
      <Heading
        flex=\\"1\\"
        size=\\"xl\\"
        className=\\"text-center\\"
        textAlign=\\"center\\"
        lineHeight=\\"1.3\\"
      >
        {'Create, iterate, inspire.'}
      </Heading>
    </Flex>
    <Text textAlign=\\"center\\" className=\\"text-center mb-4\\">
      {'Turn great ideas into new possibilities.'}
    </Text>
    <Button size=\\"md\\" backgroundColor=\\"#15803d\\" color=\\"#fff\\" isDisabled={false}>
      {'Get started'}
    </Button>
  </Flex>
</Frame>;
"
`;

exports[`text default 1`] = `
"<Frame width={100} height={40}>
  <Text textAlign=\\"center\\" className=\\"text-red-500\\">
    {'Hello world'}
  </Text>
</Frame>;
"
`;
